# rust-class-web

./: .env.toml  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  cert.pem  config.toml  key.pem
config/: app.toml
data/: db.sqlite  users.sql
src/: config.rs  db.rs  env.rs  errors.rs  lib.rs  load_rustls_config.rs  log.rs  logger.rs  main.rs  middleware.rs  state.rs  tls_config.rs  utils.rs
src/app_config/: db.rs  logger.rs  mod.rs  mongodb.rs  redis.rs  server.rs
src/config/: database.rs  db.rs  logger.rs  mod.rs  redis.rs  server.rs  tls.rs
src/entity/: devices.rs  mod.rs  users.rs
src/handlers/: index.rs  mod.rs  users.rs
src/handlers/user/: create.rs  delete.rs  get.rs  login.rs  logout.rs  mod.rs
src/middleware/: auth.rs
src/models/: token.rs
src/routes/: mod.rs  users.rs
src/utils/: mod.rs  redis.rs
