[package]
name = "rust-class-web"
version = "0.2.1"
edition = "2024"
authors = ["ftzahao <ftzahao@outlook.com>"]

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl", "rustls-0_23"] }
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"

rustls-pemfile = "2.2.0"
rustls = "0.23.29"
openssl = "0.10.73"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

sqlx = { version = "0.8.6", features = [
    "bigdecimal",
    "chrono",
    "json",
    "runtime-async-std-native-tls",
    "sqlite",
    "uuid",
    "macros",
] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
bigdecimal = "0.4.8"

env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
derive_more = { version = "2.0.1", features = ["full"] }

figment = { version = "0.10.19", features = ["toml"] }
toml = "0.9.2"

validator = "0.20.0"
anyhow = "1.0.98"
