[package]
name = "rust-class-web"
version = "0.2.2"
edition = "2024"
authors = ["ftzahao <ftzahao@outlook.com>"]

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl", "rustls-0_23"] }
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"

rustls-pemfile = "2.2.0"
rustls = "0.23.29"
openssl = "0.10.73"

sea-orm = { version = "1.1.13", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
bigdecimal = "0.4.8"
futures = "0.3.31"
derive_more = { version = "2.0.1", features = ["full"] }

figment = { version = "0.10.19", features = ["toml"] }
toml = "0.9.2"

rust-argon2 = "2.1.0"

validator = "0.20.0"
anyhow = "1.0.98"

log = "0.4.27"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = "0.2.3"
